--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -152,3 +152,164 @@ td span {
     font-weight: 700;
     border-color: #FFFFFF;
 }
+
+.form-elements {
+    margin-left: 1rem;
+    height: 600px;
+    background-color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    overflow: auto;
+}
+
+.form-inputs {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 85%;
+    height: 30px;
+}
+
+.save-btn {
+    display: inline-block;
+    padding: 0.5em 1em;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    background-color: #007bff;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-right: 2em;
+    margin-top: 2rem;
+}
+
+.save-btn:hover {
+    background-color: #0069d9;
+}
+
+.save-btn:active {
+    background-color: #0062cc;
+}
+
+.save-btn:focus {
+    outline: none;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+}
+
+.back-btn {
+    display: inline-block;
+    padding: 0.5em 1em;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    background-color: #dc3545;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.back-btn:hover {
+    background-color: #c82333;
+}
+
+.back-btn:active {
+    background-color: #bd2130;
+}
+
+.back-btn:focus {
+    outline: none;
+    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5);
+}
+
+
+.edit-save-btn {
+    display: inline-block;
+    padding: 0.5em 1em;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    background-color: #007bff;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-right: 0.5em;
+}
+
+.edit-save-btn:hover {
+    background-color: #0069d9;
+}
+
+.edit-save-btn:active {
+    background-color: #0062cc;
+}
+
+.edit-save-btn:focus {
+    outline: none;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+}
+
+.edit-back-btn {
+    display: inline-block;
+    padding: 0.5em 1em;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    background-color: #dc3545;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.edit-back-btn:hover {
+    background-color: #c82333;
+}
+
+.edit-back-btn:active {
+    background-color: #bd2130;
+}
+
+.edit-back-btn:focus {
+    outline: none;
+    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5);
+}
+
+
+.view-btn {
+    display: inline-block;
+    padding: 0.5em 1em;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    background-color: #28a745;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-left: 0.5rem;
+  }
+  
+  .view-btn:hover {
+    background-color: #218838;
+  }
+  
+  .view-btn:active {
+    background-color: #1e7e34;
+  }
+  
+  .view-btn:focus {
+    outline: none;
+    box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
+  }
